# llm-playground

./: .editorconfig  .gitignore  AGENTS.md  MIGRATION_COMPLETE.md  README.md
.github/: copilot-instructions.md
applications/summarize_webpage/: .env.example  ARCHITECTURE.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  summarize_webpage.py
applications/summarize_webpage/core/: summarizer.py
applications/summarize_webpage/tests/: __init__.py  conftest.py  test_cli.py  test_scraper.py  test_summarizer.py
llm_core/: .env.example  README.md  TESTING.md  pyproject.toml  requirements.txt
llm_core/llm_core/: __init__.py
llm_core/llm_core/providers/: base_provider.py
llm_core/llm_core/providers/strategies/: base_strategy.py  openai_api_strategy.py
llm_core/tests/: __init__.py  conftest.py  test_providers.py  test_strategies.py
llm_core/tests/integration/: __init__.py  test_provider_integration.py
summarize_webpage/: DEPENDENCIES.md  README.md  pyproject.toml  requirements-frozen.txt  requirements.txt  scraper.py  summarize_webpage.py
summarize_webpage/core/: summarizer.py
summarize_webpage/providers/: gemini.py  ollama.py  openai.py
summarize_webpage/providers/strategies/: gemini_native_strategy.py
